--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ a {
     <br>
     <br>
     <h2> <a href="https://c0nstantly.github.io/slope" target="_blank">Slope</a> </h2>
-    <h2>  <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h2>
-    <h2 <a href="https://proxy-theta-three.vercel.app/" target="_blank">Proxy 1</a></h2>
+    <h2> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h2>
+    <h2> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h2>
 
 </body>
 
