--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 h2 {
   text-align: center;
   font-family: 'Roboto', sans-serif;
+h3 {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 p {
   text-align: center;
@@ -35,9 +38,11 @@ a {
     <h2>welcome to my website! here i host certain games and tools useful for school!</h2>
     <br>
     <br>
-    <h2> <a href="https://c0nstantly.github.io/slope" target="_blank">Slope</a> </h2>
-    <h2> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h2>
-    <h2> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h2>
+    <h2> Games </h2><br>
+    <h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3>
+    <h2> Tools </h2><br>
+    <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
+    <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h3>
 
 </body>
 
