--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ a {
     <br>
     <br>
     <h2> Games </h2><br>
-    <h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3>
+    <center><h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3></center>
     <h2> Tools </h2><br>
-    <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
-    <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h3>
+   <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
+   <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h3></center>
 
 </body>
 
