--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ a {
     <h2>welcome to my website! here i host certain games and tools useful for school!</h2>
     <br>
     <br>
-    <h2> Games </h2><br>
+    <h2> Games </h2>
     <center><h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3></center>
-    <h2> Tools </h2><br>
+    <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
    <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h3></center>
 
