--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -11,7 +11,7 @@ body {
        <title> Run 3 </title>
   </head>
   <body>
-    <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" width="100%" height="100%" style="border:0;">
+    <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" width="1024" height="768" style="border:0;">
     </iframe>
   </body>
 </html>
