--- a/games/slope/index.html
+++ b/games/slope/index.html
@@ -1,4 +1,7 @@
 <html>
+    <button class="w3-button w3-red">
+     <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
+     </button>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,6 +18,7 @@
     </script>
 </head>
 <body>
+    
     <div class="webgl-content">
         <div id="gameContainer" style="width: 100%; height: 95%; margin: auto;"></div>
         <div class="footer">
