Add a new proxy and remove Run 3 as it don't work
If you want to play Run 3, it probably doesn't work but you can go to https://c0nstantly.github.io/run3

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@ a {
     <br>
     <h2> Games </h2>
     <center><h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/run3" target="_blank">Run 3</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
-   <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 1</a> </h3></center>
-
+    <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
+    <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3></center>
 </body>
 
 </html>
