--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ a {
     <br>
     <h2> Games </h2>
     <center><h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3></center>
+    <center><h3> <a href="https://c0nstantly.github.io/games/tamingio" target="_blank">Tamingio</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
