--- a/games/retro-bowl/index.html
+++ b/games/retro-bowl/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8" />
         <script type="application/javascript" src="/js/main.js"></script>
         <link rel="icon" href="img/icon.jpg">
-        <title>Retro Bowl | 3kh0</title>
+        <title>Retro Bowl | cOnstantly</title>
 
         <style>
             body {
@@ -58,8 +58,8 @@
             }
             /* END - Login Dialog Box */
             :-webkit-full-screen {
-                width: 100%;
-                height: 100%;
+                width: 97%;
+                height: 97%;
             }
         </style>
     </head>
