--- a/games/bloonstd1/index.html
+++ b/games/bloonstd1/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="bloonstd.jpg" />
   </head>
   <body>
-   
+   <button class="w3-button w3-red">
+     <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
+     </button>
     <div id="ruffle" width="100%" height="100%"></div>
     <script src="ruffle.js"></script>
     <script>
