--- a/games/cookieclicker/index.html
+++ b/games/cookieclicker/index.html
@@ -33,6 +33,10 @@
 </head>
 <body>
 
+
+<button class="w3-button w3-red">
+     <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
+     </button>
 <div id="wrapper">
 
 	<div id="topBar" style="display: none;">
