--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -4,10 +4,10 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-       <title> Taming.io </title>
+       <title> Run 3 </title>
   </head>
   <body>
-     <iframe src="https://player03.com/run/3/beta" width="98%" height="98%" style="border:0;">
+     <iframe src="https://www.coolmathgames.com/0-run-3" width="98%" height="98%" style="border:0;">
     </iframe>
   </body>
 </html>
