--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ a {
     <center><h3> <a href="https://c0nstantly.github.io/games/tamingio" target="_blank">Tamingio</a> </h3></center>
     <center><h3> <a href="https://c0nstantly.github.io/games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
     <center><h3> <a href="https://c0nstantly.github.io/games/cookieclicker" target="_blank">Cookie Clicker</a> </h3></center>
+    <center><h3> <a href="https://c0nstantly.github.io/games/gobattleio" target="_blank">Gobattle.io</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
