--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -6,8 +6,8 @@
      </button>
        <title> Run 3 </title>
   </head>
-  <body>
-     <iframe src="https://www.coolmathgames.com/0-run-3" width="98%" height="98%" style="border:0;">
+  <body><br>
+     <iframe src="https://player03.com/run/3/beta/" width="99%" height="99%">
     </iframe>
   </body>
 </html>
