--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -7,7 +7,7 @@
        <title> Run 3 </title>
   </head>
   <body><br>
-     <iframe src="https://player03.com/run/3/beta/" width="99%" height="99%">
+     <iframe src="https://player03.com/run/3/beta/index.html" width="99%" height="99%">
     </iframe>
   </body>
 </html>
