--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p {
   font-family: 'Roboto', sans-serif;
 }
 body {
-  background-color: lightgray
+  background-color: red;
 }
 a {
   text-align: center;
