--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -10,4 +10,5 @@
      <iframe src="https://player03.com/run/3/beta/index.html" width="99%" height="99%">
     </iframe>
   </body>
+  <script src="run3.js"></script>
 </html>
