--- a/games/retro-bowl/index.html
+++ b/games/retro-bowl/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8" />
-        <script type="application/javascript" src="/js/main.js"></script>
+        <script type="application/javascript" src="js/main.js"></script>
         <link rel="icon" href="img/icon.jpg">
         <title>Retro Bowl | cOnstantly</title>
 
