--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ a {
     <br>
     <br>
     <h2> Games </h2>
-    <center><h3> <a href="https://c0nstantly.github.io/games/slope" target="_blank">Slope</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/tamingio" target="_blank">Tamingio</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/cookieclicker" target="_blank">Cookie Clicker</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/gobattleio" target="_blank">Gobattle.io</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/minecraft" target="_blank">Minecraft</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/aground" target="_blank">Aground</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3></center>
+    <center><h3> <a href="games/slope" target="_blank">Slope</a> </h3></center>
+    <center><h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3></center>
+    <center><h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
+    <center><h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3></center>
+    <center><h3> <a href="games/gobattleio" target="_blank">Gobattle.io</a> </h3></center>
+    <center><h3> <a href="games/minecraft" target="_blank">Minecraft</a> </h3></center>
+    <center><h3> <a href="games/aground" target="_blank">Aground</a> </h3></center>
+    <center><h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
