--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ a {
 <body>
 
     <h1> c0nstantly </h1>
-    <h2>welcome to my website! here i host certain games and tools useful for school!</h2>
+    <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
+        <a href="index.html">Back</a></h2>
     <br>
     <br>
     <h2> Games </h2>
