--- a/games/minecraft/index.html
+++ b/games/minecraft/index.html
@@ -8,7 +8,7 @@
        <title> Minecraft </title>
   </head>
   <body><br>
-     <iframe src="https://g.deev.is/eaglercraft/index.html" width="98%" height="98%">
+     <iframe src="https://c0nstantly.github.io/eaglercraft1.5.2-final/stable-download/Offline_Download_Version.html" width="98%" height="98%">
     </iframe>
   </body>
 </html>
