--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ a {
     <center><h3> <a href="https://c0nstantly.github.io/eaglercraft1.5.2-final/stable-download/Offline_Download_Version.html" target="_blank">Minecraft</a> </h3></center>
     <center><h3> <a href="games/aground" target="_blank">Aground</a> </h3></center>
     <center><h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3></center>
+    <center><h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
