--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ a {
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
     <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3></center>
+     <center>  <h3> <a href="https://c0nstantly.github.io/tools/beepbox/" target="_blank">BeepBox</a> </h3></center>
 </body>
 
 </html>
