--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@ a {
     <center><h3> <a href="games/aground" target="_blank">Aground</a> </h3></center>
     <center><h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3></center>
     <center><h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3></center>
+    <center><h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3></center>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
     <center>  <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3></center>
-     <center>  <h3> <a href="https://c0nstantly.github.io/tools/beepbox/" target="_blank">BeepBox</a> </h3></center>
+     <center>  <h3> <a href="tools/beepbox/" target="_blank">BeepBox</a> </h3></center>
 </body>
 
 </html>
