--- a/games/evoworld/index.html
+++ b/games/evoworld/index.html
@@ -7,7 +7,7 @@
        <title> Evoworld </title>
   </head>
   <body><br>
-     <iframe src="evoworld.io/" width="99%" height="99%">
+     <iframe src="https://evoworld.io/" width="99%" height="99%">
     </iframe>
   </body>
 </html>
