--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ a {
     <br>
     <br>
     <h2> Games </h2>
+    <center><h3> <a href="games/index.html" target="_blank">More Games!</a> </h3></center>
     <center><h3> <a href="games/slope" target="_blank">Slope</a> </h3></center>
     <center><h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3></center>
     <center><h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
