--- a/games/index.html
+++ b/games/index.html
@@ -6,8 +6,8 @@
      </button>
        <title> Other Games! </title>
   </head>
-  <body><h1> Direct Link to Games: <a href="https://blue-delightful-turkey.cyclic.app/14.html?page=0" target="_blank"
-     <iframe src="https://blue-delightful-turkey.cyclic.app/14.html?page=0" width="100%" height="100%">
+  <body><h1> Direct Link to Games: <a href="https://blue-delightful-turkey.cyclic.app/14.html" target="_blank">https://blue-delightful-turkey.cyclic.app/14.html</a></h1>
+     <iframe src="https://blue-delightful-turkey.cyclic.app/14.html" width="100%" height="100%">
     </iframe>
   </body>
 </html>
