--- a/games/territorial-io/index.html
+++ b/games/territorial-io/index.html
@@ -4,7 +4,7 @@
    <button class="w3-button w3-red">
      <a href="/index.html" class="w3-button w3-black">Back</a>
      </button>
-       <title> Gobattle.io </title>
+       <title> Territorial.io </title>
   </head>
   <body>
      <iframe src="https://territorial.io/" width="100%" height="100%" style="border:0;">
