--- a/games/clickerheroes/index.html
+++ b/games/clickerheroes/index.html
@@ -7,7 +7,7 @@
        <title> Clicker Heroes </title>
   </head>
   <body>
-     <iframe src="ClickerHeroesUnblocked.github.io/" width="100%" height="100%" style="border:0;">
+     <iframe src="https://clickerheroesunblocked.github.io/" width="100%" height="100%" style="border:0;">
     </iframe>
   </body>
 </html>
