--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ a {
     <center><h3> <a href="games/index.html" target="_blank">More Games!</a> </h3></center>
     <center><h3> <a href="games/slope" target="_blank">Slope</a> </h3></center>
     <center><h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3></center>
+    <center><h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3></center
     <center><h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3></center>
     <center><h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
     <center><h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3></center>
