--- a/index.html
+++ b/index.html
@@ -7,29 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>constantly's website</title>
 <style>
-h1 {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-}
-h2 {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-h3 {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-}
-p {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-}
+
 body {
   background-color: red;
+  font-family: 'Sono', sans-serif;
+  text-align: center;
+
 }
 a {
   text-align: center;
   font-family: 'Roboto', sans-serif;
+  text-color: blue;
 }
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
 </head>
 
 <body>
