--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 body {
   background-color: red;
   font-family: 'Sono', sans-serif;
-  text-align: center;
+  text-align: left;
+  margin-left: 25%;
+}
 
 }
 a {
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  text-color: blue;
+  color: blue;
 }
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,6 +35,7 @@ a {
     <br>
     <br>
     <h2> Games </h2>
+    <nav>
     <center><h3> <a href="games/index.html" target="_blank">More Games!</a> </h3></center>
     <center><h3> <a href="games/slope" target="_blank">Slope</a> </h3></center>
     <center><h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3></center>
@@ -47,6 +50,7 @@ a {
     <center><h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3></center>
     <center><h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3></center>
      <center><h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3></center>
+    </nav>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
     <center> <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3> </center>
