--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@ a {
     <br>
     <h2> Games </h2>
     <nav>
-    <center><h3> <a href="games/index.html" target="_blank">More Games!</a> </h3></center>
-    <center><h3> <a href="games/slope" target="_blank">Slope</a> </h3></center>
-    <center><h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3></center>
-    <center><h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3></center>
-    <center><h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3></center>
-    <center><h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3></center>
-    <center><h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3></center>
-    <center><h3> <a href="games/gobattleio" target="_blank">Gobattle.io</a> </h3></center>
-    <center><h3> <a href="https://c0nstantly.github.io/eaglercraft1.5.2-final/stable-download/Offline_Download_Version.html" target="_blank">Minecraft</a> </h3></center>
-    <center><h3> <a href="games/aground" target="_blank">Aground</a> </h3></center>
-    <center><h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3></center>
-    <center><h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3></center>
-    <center><h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3></center>
-     <center><h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3></center>
+    <h3> <a href="games/index.html" target="_blank">More Games!</a> </h3>
+   <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
+    <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
+    <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3>
+    <h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3>
+    <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
+   <h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3>
+    <h3> <a href="games/gobattleio" target="_blank">Gobattle.io</a> </h3>
+   <h3> <a href="https://c0nstantly.github.io/eaglercraft1.5.2-final/stable-download/Offline_Download_Version.html" target="_blank">Minecraft</a> </h3>
+   <h3> <a href="games/aground" target="_blank">Aground</a> </h3>
+    <h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3>
+    <h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3>
+    <h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3>
+     <h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3>
     </nav>
     <h2> Tools </h2>
    <center> <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3></center>
