--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a {
 <nav>
 
     <h2> Games </h2>
-    <h3> <a href="games/index.html" target="_blank">More Games!</a> </h3>
+    <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
     <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3>
