--- a/games/shell-shockers/index.html
+++ b/games/shell-shockers/index.html
@@ -8,7 +8,7 @@
        <title> Shell Shockers </title>
   </head>
   <body>
-     <iframe src="https://eggcombat.com/" width="100%" height="100%" style="border:0;">
+     <iframe src="https://yolk.quest/" width="100%" height="100%" style="border:0;">
     </iframe>
   </body>
 </html>
