--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a {
     <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
    <h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3>
     <h3> <a href="games/gobattleio" target="_blank">Gobattle.io</a> </h3>
-   <h3> <a href="https://c0nstantly.github.io/eaglercraft1.5.2-final/stable-download/Offline_Download_Version.html" target="_blank">Minecraft</a> </h3>
+   <h3> <a href="https://ekoerp1.github.io/eaglercraft-1.15-Final-Release/javascript/" target="_blank">Minecraft</a> </h3>
    <h3> <a href="games/aground" target="_blank">Aground</a> </h3>
     <h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3>
     <h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3>
