--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ a {
 <nav>
 
     <h2> Games </h2>
-    <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
+    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife (NEW)</a> </h3>
+    <h3> <a href="games/vex" target="_blank">BitLife (NEW)</a> </h3>
+    <h3> <a href="games/shell-shockers/" target="_blank">Vex (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
     <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3>
