--- a/games/vex/index.html
+++ b/games/vex/index.html
@@ -4,7 +4,7 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-       <title> Clicker Heroes </title>
+       <title> Vex </title>
   </head>
   <body>
      <iframe src="https://vexunblocked.github.io/4" width="100%" height="100%" style="border:0;">
