--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@ a {
 
     <h2> Games </h2>
     <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife (NEW)</a> </h3>
+    <h3> <a href="games/geogeuss" target="_blank">GeoGuess</a> </h3>
     <h3> <a href="games/vex" target="_blank">Vex (NEW)</a> </h3>
     <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
-    <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io (NEW)</a> </h3>
+    <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io</a> </h3>
     <h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3>
     <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
    <h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3>
