--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a {
 
     <h2> Games </h2>
     <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife (NEW)</a> </h3>
-    <h3> <a href="games/geogeuss" target="_blank">GeoGuess</a> </h3>
+    <h3> <a href="https://demo.geoguess.games/" target="_blank">GeoGuess</a> </h3>
     <h3> <a href="games/vex" target="_blank">Vex (NEW)</a> </h3>
     <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
