--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@ a {
 </head>
 
 <body>
-
+<script src="clock.js"></script>
     <h1> c0nstantly </h1>
     <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
-        <a href="index.html">Back</a></h2>
+        <a href="index.html">Back</a>
+     <div id = "digital-clock"> </div>
+    </h2>
+    
     <br>
     <br>
 <nav>
