--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@ a {
     <h1> c0nstantly </h1>
     <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
         <a href="index.html">Back</a>
-     <div id = "digital-clock"> </div>
-     <script src="clock.js"></script>
+   <iframe width="200" height="200" src="tools/clock"></iframe>
     </h2>
     
     <br>
@@ -65,6 +64,7 @@ a {
     <h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3>
      <h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3>
     <h2> Tools </h2>
+    <h3> <a href="tools/clock" target="_blank">Clock (NEW)</a></h3>
   <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
     <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3>
      <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3>
