--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
  <meta charset = "utf-8">
- <title id="digital-clock"> Online Clock </title>
+ <title id="digital-clock-title"> Online Clock </title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
