--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -11,7 +11,7 @@
  <body>
  <div id = "digital-clock"> </div>
  <script src = "script.js"> </script>
- <h2>Date/Time: <span id="datetime"></span></h2>
+ <h2 style="font-size=64px;">Date: <span id="datetime"></span></h2>
 
 <script>
 var dt = new Date();
