--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -11,7 +11,7 @@
  <body>
  <div id = "digital-clock"> </div>
  <script src = "script.js"> </script>
-<h2 class="big">Date: <span id="datetime"></span></h2>
+<center><h2 class="big">Date: <span id="datetime"></span></h2></center>
 
 <script>
 const date = new Date()
