--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@ a {
 </head>
 
 <body>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ebf244105787767a301a2f04d19328a4',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/ebf244105787767a301a2f04d19328a4/invoke.js"></scr' + 'ipt>');
+</script>
     <h1> c0nstantly </h1>
     <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
         <a href="index.html">Back</a>
@@ -70,7 +79,16 @@ a {
      <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3>
     <h3> <a href="tools/beepbox/" target="_blank">BeepBox</a> </h3>
     </nav>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ebf244105787767a301a2f04d19328a4',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/ebf244105787767a301a2f04d19328a4/invoke.js"></scr' + 'ipt>');
+</script>
 </body>
 
 </html>
