--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -22,5 +22,16 @@ let currentDate = `${month}/${day}/${year}`;
 
 document.getElementById("datetime").innerHTML = currentDate.toLocaleString();
 </script>
+
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'ebf244105787767a301a2f04d19328a4',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/ebf244105787767a301a2f04d19328a4/invoke.js"></scr' + 'ipt>');
+</script>
  </body>
 </html>
