--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ a {
     <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
+	<a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5"> <img src="https://adsterra.com/_nuxt/img/logo_extended.fddf2fa.svg" alt="Adsterra"> </a>
     <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io</a> </h3>
     <h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3>
     <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
@@ -73,6 +74,7 @@ a {
     <h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3>
     <h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3>
      <h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3>
+	
     <h2> Tools </h2>
     <h3> <a href="tools/clock" target="_blank">Clock (NEW)</a></h3>
   <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
