--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@ a {
     <br>
 <nav>
 
-    <h2> Games </h2>
+    <h2> Games </h2> 
     <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife (NEW)</a> </h3>
     <h3> <a href="https://demo.geoguess.games/" target="_blank">GeoGuess</a> </h3>
     <h3> <a href="games/vex" target="_blank">Vex (NEW)</a> </h3>
     <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
-	<a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5"> <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra"> </a>
+	<center>
+	<a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" target="_blank"> <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a>
+    </center>
     <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io</a> </h3>
     <h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3>
     <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
