--- a/index.html
+++ b/index.html
@@ -7,26 +7,8 @@
   <title>c0nstantly's website</title>
 </head>
 <body>
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'c673ce4262150a5d6c4888fb8d2223fa',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/c673ce4262150a5d6c4888fb8d2223fa/invoke.js"></scr' + 'ipt>');
-</script>
-  <iframe width="100%" length="100%" src="https://rentry.co/c0nstantly"></iframe>
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'c673ce4262150a5d6c4888fb8d2223fa',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/c673ce4262150a5d6c4888fb8d2223fa/invoke.js"></scr' + 'ipt>');
-</script>
+ 
+  <iframe width="100%" height="100%" src="https://rentry.co/c0nstantly"></iframe>
+  
 </body>
 </html>
