--- a/games/jacksmith/index.html
+++ b/games/jacksmith/index.html
@@ -1,13 +1,29 @@
-<html lang=en_us>
+
+<html>
   <head>
-   
-   <button class="w3-button w3-red">
-     <a href="/index.html" class="w3-button w3-black">Back</a>
-     </button>
-       <title> Jacksmith </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Jacksmith</title>
+    <link rel="icon" type="image/x-icon" href="bloonstd.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="bloonstd.jpg" />
   </head>
-  <body><br>
-     <iframe src="https://jacksmithgame.io/jacksmith.embed" width="99%" height="99%">
-    </iframe>
+  <body>
+   <button class="w3-button w3-red">
+     <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
+     </button>
+    <div id="ruffle" width="100%" height="100%"></div>
+    <script src="ruffle.js"></script>
+    <script>
+      window.RufflePlayer = window.RufflePlayer || {};
+      window.addEventListener("load", (event) => {
+        const ruffle = window.RufflePlayer.newest();
+        const player = ruffle.createPlayer();
+        const container = document.getElementById("ruffle");
+        player.id = "player";
+        player.style.width = "100%";
+        player.style.height = "100%";
+        container.appendChild(player);
+        player.load("jacksmith.swf");
+      });
+    </script>
   </body>
 </html>
