--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -18,6 +18,9 @@ const date = new Date()
 let year = date.getFullYear()
 let day = date.getDate()
 let month = date.getMonth()+1
+year = update(year)
+day = update(month)
+month = update(month)
 let currentDate = `${month}/${day}/${year}`;
 
 document.getElementById("datetime").innerHTML = currentDate.toLocaleString();
