--- a/tools/clock/index.html
+++ b/tools/clock/index.html
@@ -19,7 +19,7 @@ let year = date.getFullYear()
 let day = date.getDate()
 let month = date.getMonth()+1
 year = update(year)
-day = update(month)
+day = update(day)
 month = update(month)
 let currentDate = `${month}/${day}/${year}`;
 
