--- a/games/jacksmith/index.html
+++ b/games/jacksmith/index.html
@@ -10,7 +10,7 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-    <h1>RIGHT CLICK AND CLICK PLAY</h1>
+    <h1>RIGHT CLICK THE GAME AND CLICK PLAY!</h1>
     <div id="ruffle" width="100%" height="100%"></div>
     <script src="ruffle.js"></script>
     <script>
