--- a/games/jacksmith/index.html
+++ b/games/jacksmith/index.html
@@ -24,6 +24,7 @@
         player.style.height = "100%";
         container.appendChild(player);
         player.load("jacksmith.swf");
+        autoplay: "auto";
       });
     </script>
   </body>
