--- a/games/run/index.html
+++ b/games/run/index.html
@@ -10,21 +10,6 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-    <div id="ruffle" width="100%" height="100%"></div>
-    <script src="ruffle.js"></script>
-    <script>
-      window.RufflePlayer = window.RufflePlayer || {};
-      window.addEventListener("load", (event) => {
-        const ruffle = window.RufflePlayer.newest();
-        const player = ruffle.createPlayer();
-        const container = document.getElementById("ruffle");
-        player.id = "player";
-        player.style.width = "100%";
-        player.style.height = "100%";
-        container.appendChild(player);
-        player.load("run.swf");
-        autoplay: "auto";
-      });
-    </script>
+    <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/run/index.html" style="border: 0;"></iframe>
   </body>
 </html>
