--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@ a {
 <nav>
 
     <h2> Games </h2> 
+    <h3> <a href="games/run" target="_blank">Run (NEW)</a> </h3>
     <h3> <a href="games/jacksmith" target="_blank">Jacksmith (NEW)</a> </h3>
-    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife (NEW)</a> </h3>
+    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife</a> </h3>
     <h3> <a href="https://demo.geoguess.games/" target="_blank">GeoGuess</a> </h3>
     <h3> <a href="games/vex" target="_blank">Vex</a> </h3>
-    <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers (NEW)</a> </h3>
+    <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers</a> </h3>
    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
-    <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes (NEW)</a> </h3>
+    <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes</a> </h3>
 </nav>
 	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" target="_blank"> <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
  <nav>
