--- a/games/run/index.html
+++ b/games/run/index.html
@@ -10,6 +10,6 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-    <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/run/index.html" style="border: 0;"></iframe>
+    <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/run/index.html" style="border: 0;" width="99%" height="99%"></iframe>
   </body>
 </html>
