--- a/games/jacksmith/index.html
+++ b/games/jacksmith/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jacksmith</title>
+    <title>Home</title>
     <link rel="icon" type="image/x-icon" href="bloonstd.jpg" />
-    <link rel="shortcut icon" type="image/x-icon" href="bloonstd.jpg" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-    <h1>RIGHT CLICK THE GAME AND CLICK PLAY!</h1>
+    
     <div id="ruffle" width="100%" height="100%"></div>
     <script src="ruffle.js"></script>
     <script>
