--- a/games/a-small-world-cup/index.html
+++ b/games/a-small-world-cup/index.html
@@ -4,7 +4,8 @@
    <button class="w3-button w3-red">
      <a href="/index.html" class="w3-button w3-black">Back</a>
      </button>
-       <title> A Small World Cup </title> </title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+       <title> Home</title>
   </head>
   <body>
      <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1643267/index.html" width="100%" height="100%" style="border:0;">
