--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -4,11 +4,11 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-       <title> Run 3 </title>
+       <title> Home </title>
   </head>
   <body><br>
-     <iframe src="https://player03.com/run/3/beta/index.html" width="99%" height="99%">
+     <iframe src="https://c0nstantly.github.io/run3/tn6pS9dCf37xAhkJv/" width="99%" height="99%">
     </iframe>
   </body>
-  <script src="run3.js"></script>
+
 </html>
