--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -4,7 +4,8 @@
    <button class="w3-button w3-red">
      <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
      </button>
-       <title> Home </title>
+    <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
+    <title> Home </title>
   </head>
   <body><br>
      <iframe src="https://c0nstantly.github.io/run3/tn6pS9dCf37xAhkJv/" width="99%" height="99%">
