--- a/games/run3/index.html
+++ b/games/run3/index.html
@@ -2,7 +2,7 @@
   <head>
    
    <button class="w3-button w3-red">
-     <a href="https://c0nstantly.github.io" class="w3-button w3-black">Back</a>
+     <a href="/index.html" class="w3-button w3-black">Back</a>
      </button>
     <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
     <title> Home </title>
