--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ a {
     <br>
 <nav>
 
-    <h2> Games </h2> 
+    <h2> Games </h2>
+    <h3> <a href="games/run3" target="_blank">Run 3(NEW)</a> </h3>
     <h3> <a href="games/run" target="_blank">Run (NEW)</a> </h3>
     <h3> <a href="games/jacksmith" target="_blank">Jacksmith (NEW)</a> </h3>
     <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife</a> </h3>
