--- a/games/ovo/index.html
+++ b/games/ovo/index.html
@@ -4,7 +4,8 @@
    <button class="w3-button w3-red">
      <a href="/index.html" class="w3-button w3-black">Back</a>
      </button>
-       <title> Ovo </title>
+       <title> Home </title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
      <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/ovo/index.html" width="100%" height="100%" style="border:0;">
