--- a/games/ovo/index.html
+++ b/games/ovo/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-     <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/ovo/index.html" width="100%" height="100%" style="border:0;">
+     <iframe src="https://ovogame.co/ovo.embed" width="100%" height="100%" style="border:0;">
     </iframe>
   </body>
 </html>
