a small... WORLD CUP

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ a {
 <nav>
 
     <h2> Games </h2>
+    <h3> <a href="games/a-small-world-cup" target="_blank">A Small World Cup (NEW)</a> </h3>
     <h3> <a href="games/ovo/" target="_blank">Ovo (NEW)</a> </h3>
     <h3> <a href="games/run3" target="_blank">Run 3 (NEW)</a> </h3>
     <h3> <a href="games/run" target="_blank">Run (NEW)</a> </h3>
@@ -64,7 +65,7 @@ a {
     <h3> <a href="https://demo.geoguess.games/" target="_blank">GeoGuess</a> </h3>
     <h3> <a href="games/vex" target="_blank">Vex</a> </h3>
     <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers</a> </h3>
-   <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
+    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
     <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes</a> </h3>
 </nav>
 	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" target="_blank"> <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
