--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a {
     <br>
     <br>
 <nav>
-
+<h2> NEW PROXY ADDED!!!</h2>
     <h2> Games </h2>
     <h3> <a href="games/a-small-world-cup" target="_blank">A Small World Cup (NEW)</a> </h3>
     <h3> <a href="games/ovo/" target="_blank">Ovo (NEW)</a> </h3>
@@ -88,5 +88,38 @@ a {
   <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
     <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3>
      <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3>
+<h3> <a href="javascript:void(0);" onclick="openGame()">Proxy 3</a>
+	<h3> <a href="javascript:void(0);" onclick="openGame1()">Proxy 4</a>
     <h3> <a href="tools/beepbox/" target="_blank">BeepBox</a> </h3>
     </nav>
+
+
+				https://radon.games/				    
+<script>
+function openGame() {
+var win = window.open()
+var url = "https://terbium-46q.pages.dev/"
+var iframe = win.document.createElement('iframe')
+iframe.style.width = "100%";
+iframe.style.height = "100%";
+iframe.style.border = "none";
+iframe.style.margin = "0";
+iframe.style.display = "block";
+iframe.src = url
+win.document.body.appendChild(iframe)
+}
+</script>
+<script>
+function openGame1() {
+var win = window.open()
+var url = "https://radon.games/"
+var iframe = win.document.createElement('iframe')
+iframe.style.width = "100%";
+iframe.style.height = "100%";
+iframe.style.border = "none";
+iframe.style.margin = "0";
+iframe.style.display = "block";
+iframe.src = url
+win.document.body.appendChild(iframe)
+}
+</script>
