--- a/cloaked.html
+++ b/cloaked.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title></title>
+  <title>My Drive - Google Drive</title>
+  <link rel="icon" href="https://ssl.gstatic.com/docs/doclist/images/drive_2022q3_32dp.png" type="image/x-icon">
 </head>
 <body>
 <script>
