--- a/cloaked.html
+++ b/cloaked.html
@@ -16,6 +16,7 @@ iframe.src = url
 win.document.body.appendChild(iframe)
 }
 window.open("https://drive.google.com", "_blank" )
+window.open("/cloaked")
 window.location.href = openGame()
 </script>
 </body>
