--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a {
 </script>
     <h1> c0nstantly </h1>
     <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
-        <a href="index.html">Back</a>
+        <a href="index.html" target="_blank">Back</a>
    
     </h2>
     <iframe width="700" height="200" src="tools/clock"></iframe>
@@ -56,7 +56,7 @@ a {
 <nav>
 <h2> NEW PROXY ADDED!!!</h2>
     <h2> Games </h2>
-    <h3> <a href="games/a-small-world-cup" target="_blank">A Small World Cup (NEW)</a> </h3>
+    <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
     <h3> <a href="games/ovo/" target="_blank">Ovo (NEW)</a> </h3>
     <h3> <a href="games/run3" target="_blank">Run 3 (NEW)</a> </h3>
     <h3> <a href="games/run" target="_blank">Run (NEW)</a> </h3>
