--- a/index.html
+++ b/index.html
@@ -57,40 +57,40 @@ a {
 <h2> NEW PROXY ADDED!!!</h2>
     <h2> Games </h2>
     <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
-    <h3> <a href="games/ovo/" target="_blank">Ovo (NEW)</a> </h3>
-    <h3> <a href="games/run3" target="_blank">Run 3 (NEW)</a> </h3>
-    <h3> <a href="games/run" target="_blank">Run (NEW)</a> </h3>
-    <h3> <a href="games/jacksmith" target="_blank">Jacksmith </a> </h3>
-    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" target="_blank">BitLife</a> </h3>
-    <h3> <a href="https://demo.geoguess.games/" target="_blank">GeoGuess</a> </h3>
-    <h3> <a href="games/vex" target="_blank">Vex</a> </h3>
-    <h3> <a href="games/shell-shockers/" target="_blank">Shell Shockers</a> </h3>
-    <h3> <a href="games/slope" target="_blank">Slope</a> </h3>
-    <h3> <a href="games/clickerheroes/" target="_blank">Clicker Heroes</a> </h3>
+    <h3> <a href="games/ovo/" >Ovo (NEW)</a> </h3>
+    <h3> <a href="games/run3" >Run 3 (NEW)</a> </h3>
+    <h3> <a href="games/run" >Run (NEW)</a> </h3>
+    <h3> <a href="games/jacksmith" >Jacksmith </a> </h3>
+    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" >BitLife</a> </h3>
+    <h3> <a href="https://demo.geoguess.games/" >GeoGuess</a> </h3>
+    <h3> <a href="games/vex" >Vex</a> </h3>
+    <h3> <a href="games/shell-shockers/" >Shell Shockers</a> </h3>
+    <h3> <a href="games/slope" >Slope</a> </h3>
+    <h3> <a href="games/clickerheroes/" >Clicker Heroes</a> </h3>
 </nav>
-	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" target="_blank"> <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
+	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" > <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
  <nav>
 	 
-    <h3> <a href="games/deeep-io/" target="_blank">Deeeep.io</a> </h3>
-    <h3> <a href="games/tamingio" target="_blank">Tamingio</a> </h3>
-    <h3> <a href="games/bloonstd1" target="_blank">Bloons TD 1</a> </h3>
-   <h3> <a href="games/cookieclicker" target="_blank">Cookie Clicker</a> </h3>
-    <h3> <a href="games/gobattleio" target="_blank">Gobattle.io</a> </h3>
-   <h3> <a href="https://c0nstantly.github.io/minecraft/" target="_blank">Minecraft</a> </h3>
-   <h3> <a href="games/aground" target="_blank">Aground</a> </h3>
-    <h3> <a href="games/bloonstd2/" target="_blank">Bloons TD 2</a> </h3>
-    <h3> <a href="games/bandit.rip/" target="_blank">Bandit.rip</a> </h3>
-    <h3> <a href="games/evoworld/" target="_blank">Evoworld</a> </h3>
-     <h3> <a href="games/territorial-io/" target="_blank">Territorial.io</a> </h3>
+    <h3> <a href="games/deeep-io/" >Deeeep.io</a> </h3>
+    <h3> <a href="games/tamingio" >Tamingio</a> </h3>
+    <h3> <a href="games/bloonstd1" >Bloons TD 1</a> </h3>
+   <h3> <a href="games/cookieclicker" >Cookie Clicker</a> </h3>
+    <h3> <a href="games/gobattleio" >Gobattle.io</a> </h3>
+   <h3> <a href="https://c0nstantly.github.io/minecraft/" >Minecraft</a> </h3>
+   <h3> <a href="games/aground" >Aground</a> </h3>
+    <h3> <a href="games/bloonstd2/" >Bloons TD 2</a> </h3>
+    <h3> <a href="games/bandit.rip/" >Bandit.rip</a> </h3>
+    <h3> <a href="games/evoworld/" >Evoworld</a> </h3>
+     <h3> <a href="games/territorial-io/" >Territorial.io</a> </h3>
 	
     <h2> Tools </h2>
-    <h3> <a href="tools/clock" target="_blank">Clock (NEW)</a></h3>
-  <h3> <a href="https://vercel-phi-neon.vercel.app/" target="_blank">Translator</a></h3>
-    <h3> <a href="https://blue-delightful-turkey.cyclic.app/" target="_blank">Proxy 1</a></h3>
-     <h3> <a href="https://proxy-theta-three.vercel.app" target="_blank">Proxy 2</a> </h3>
+    <h3> <a href="tools/clock" >Clock (NEW)</a></h3>
+  <h3> <a href="https://vercel-phi-neon.vercel.app/" >Translator</a></h3>
+    <h3> <a href="https://blue-delightful-turkey.cyclic.app/" >Proxy 1</a></h3>
+     <h3> <a href="https://proxy-theta-three.vercel.app" >Proxy 2</a> </h3>
 <h3> <a href="javascript:void(0);" onclick="openGame()">Proxy 3</a>
 	<h3> <a href="javascript:void(0);" onclick="openGame1()">Proxy 4</a>
-    <h3> <a href="tools/beepbox/" target="_blank">BeepBox</a> </h3>
+    <h3> <a href="tools/beepbox/" >BeepBox</a> </h3>
     </nav>
 			    
 <script>
