--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ a {
 	document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/c673ce4262150a5d6c4888fb8d2223fa/invoke.js"></scr' + 'ipt>');
 </script>
     <h1> c0nstantly </h1>
-    <h2>welcome to my website! here i host certain games and tools useful for school! (Please do not use the back button, instead have this open: 
+    <h2>welcome to my website! here i host certain tools useful for school! (Please do not use the back button, instead have this open: 
         <a href="index.html" target="_blank">Back</a>
    
     </h2>
@@ -54,7 +54,7 @@ a {
     <br>
     <br>
 <nav>
-<h2> NEW PROXY ADDED!!!</h2>
+	<br><br><br><br><br><br><br>
     <h2> Games </h2>
     <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
     <h3> <a href="games/ovo/" >Ovo (NEW)</a> </h3>
