--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@ a {
 <nav>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h2> Games </h2>
+    <h3> <a href="games/chess">Chess (NEW)</a> </h3>
     <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
     <h3> <a href="games/ovo/" >Ovo (NEW)</a> </h3>
-    <h3> <a href="games/run3" >Run 3 (NEW)</a> </h3>
-    <h3> <a href="games/run" >Run (NEW)</a> </h3>
+    <h3> <a href="games/run3" >Run 3</a> </h3>
+    <h3> <a href="games/run" >Run</a> </h3>
     <h3> <a href="games/jacksmith" >Jacksmith </a> </h3>
     <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" >BitLife</a> </h3>
     <h3> <a href="https://demo.geoguess.games/" >GeoGuess</a> </h3>
