--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@ a {
     <br>
 <nav>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<a href="#a">A</a> | <a href="#b">B</a> | <a href="#c">C</a> | <a href="#d">D</a>| <a href="#e">E</a> | <a href="#g">G</a> | <a href="#j">J</a> | <a href="#m">M</a>| <a href="#O">O</a> | <a href="#r">R</a>| <a href="#s">S</a> | <a href="#t">T</a> | <a href="#v">V</a>
     <h2> Games </h2>
-    <h3> <a href="games/chess">Chess (NEW)</a> </h3>
+<h3> <a href="games/aground" id="a">Aground</a> </h3>
     <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
-    <h3> <a href="games/ovo/" >Ovo (NEW)</a> </h3>
-    <h3> <a href="games/run3" >Run 3</a> </h3>
-    <h3> <a href="games/run" >Run</a> </h3>
-    <h3> <a href="games/jacksmith" >Jacksmith </a> </h3>
-    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" >BitLife</a> </h3>
-    <h3> <a href="https://demo.geoguess.games/" >GeoGuess</a> </h3>
-    <h3> <a href="games/vex" >Vex</a> </h3>
-    <h3> <a href="games/shell-shockers/" >Shell Shockers</a> </h3>
-    <h3> <a href="games/slope" >Slope</a> </h3>
+    <h3> <a href="games/bandit.rip/" id="b">Bandit.rip</a> </h3>
+	    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" >BitLife</a> </h3>
+	 <h3> <a href="games/bloonstd1" >Bloons TD 1</a> </h3>
+	  <h3> <a href="games/bloonstd2/" >Bloons TD 2</a> </h3>
+    <h3> <a href="games/chess" id="c">Chess (NEW)</a> </h3>
     <h3> <a href="games/clickerheroes/" >Clicker Heroes</a> </h3>
+    <h3> <a href="games/cookieclicker" >Cookie Clicker</a> </h3>
+	<h3> <a href="games/deeep-io/" id="d">Deeeep.io</a> </h3>
+	<h3> <a href="games/evoworld/" id="e" >Evoworld</a> </h3>
+	    <h3> <a href="https://demo.geoguess.games/" id="g">GeoGuess</a> </h3>
+	    <h3> <a href="games/gobattleio" >Gobattle.io</a> </h3>
+	 <h3> <a href="games/jacksmith" id="j">Jacksmith </a> </h3>
 </nav>
 	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" > <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
  <nav>
-	 
-    <h3> <a href="games/deeep-io/" >Deeeep.io</a> </h3>
-    <h3> <a href="games/tamingio" >Tamingio</a> </h3>
-    <h3> <a href="games/bloonstd1" >Bloons TD 1</a> </h3>
-   <h3> <a href="games/cookieclicker" >Cookie Clicker</a> </h3>
-    <h3> <a href="games/gobattleio" >Gobattle.io</a> </h3>
-   <h3> <a href="https://c0nstantly.github.io/minecraft/" >Minecraft</a> </h3>
-   <h3> <a href="games/aground" >Aground</a> </h3>
-    <h3> <a href="games/bloonstd2/" >Bloons TD 2</a> </h3>
-    <h3> <a href="games/bandit.rip/" >Bandit.rip</a> </h3>
-    <h3> <a href="games/evoworld/" >Evoworld</a> </h3>
+	<h3> <a href="https://c0nstantly.github.io/minecraft/" id="m" >Minecraft</a> </h3>
+    <h3> <a href="games/ovo/" id="o">Ovo (NEW)</a> </h3>
+    <h3> <a href="games/run3" id="r">Run 3</a> </h3>
+    <h3> <a href="games/run" >Run</a> </h3>
+       <h3> <a href="games/shell-shockers/" id="s">Shell Shockers</a> </h3>
+    <h3> <a href="games/slope" >Slope</a> </h3>
+    <h3> <a href="games/tamingio" id="t">Tamingio</a> </h3>
      <h3> <a href="games/territorial-io/" >Territorial.io</a> </h3>
-	
+    <h3> <a href="games/vex" id="v" >Vex</a> </h3>
+	 
     <h2> Tools </h2>
     <h3> <a href="tools/clock" >Clock (NEW)</a></h3>
   <h3> <a href="https://vercel-phi-neon.vercel.app/" >Translator</a></h3>
@@ -98,7 +98,7 @@ a {
 <script>
 function openGame() {
 var win = window.open()
-var url = "https://terbium-46q.pages.dev/"
+var url = "https://desmos.me"
 var iframe = win.document.createElement('iframe')
 iframe.style.width = "100%";
 iframe.style.height = "100%";
