--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a {
     <br>
 <nav>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<a href="#a">A</a> | <a href="#b">B</a> | <a href="#c">C</a> | <a href="#d">D</a>| <a href="#e">E</a> | <a href="#g">G</a> | <a href="#j">J</a> | <a href="#m">M</a>| <a href="#O">O</a> | <a href="#r">R</a>| <a href="#s">S</a> | <a href="#t">T</a> | <a href="#v">V</a>
+<p><a href="#a">A</a> | <a href="#b">B</a> | <a href="#c">C</a> | <a href="#d">D</a>| <a href="#e">E</a> | <a href="#g">G</a> | <a href="#j">J</a> | <a href="#m">M</a>| <a href="#O">O</a> | <a href="#r">R</a>| <a href="#s">S</a> | <a href="#t">T</a> | <a href="#v">V</a></p>
     <h2> Games </h2>
 <h3> <a href="games/aground" id="a">Aground</a> </h3>
     <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
