--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a {
     <br>
     <br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<center> <h3> <b> <a href="#a">A</a> | <a href="#b">B</a> | <a href="#c">C</a> | <a href="#d">D</a>| <a href="#e">E</a> | <a href="#g">G</a> | <a href="#j">J</a> | <a href="#m">M</a>| <a href="#O">O</a> | <a href="#r">R</a>| <a href="#s">S</a> | <a href="#t">T</a> | <a href="#v">V</a> </b> </h3> </center>
+<center> <h3 style="font-size: 64px;"> <b> <a href="#a">A</a> | <a href="#b">B</a> | <a href="#c">C</a> | <a href="#d">D</a> | <a href="#e">E</a> | <a href="#g">G</a> | <a href="#j">J</a> | <a href="#m">M</a> | <a href="#O">O</a> | <a href="#r">R</a> | <a href="#s">S</a> | <a href="#t">T</a> | <a href="#v">V</a> </b> </h3> </center>
   <nav>
 	<h2> Games </h2>
 <h3> <a href="games/aground" id="a">Aground</a> </h3>
