--- a/games/vex/index.html
+++ b/games/vex/index.html
@@ -7,7 +7,7 @@
        <title> Vex </title>
   </head>
   <body>
-     <iframe src="https://vexunblocked.github.io/4" width="100%" height="100%" style="border:0;">
+     <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/vex3/index.html" width="100%" height="100%" style="border:0;">
     </iframe>
   </body>
 </html>
