--- a/games/stick-fight/index.html
+++ b/games/stick-fight/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-     <iframe src="https://kdata1.com/2015/9/stick-fight-2" width="100%" height="100%" style="border:0;">
+     <iframe src="https://ezpzunblockedgames.com/games/stick-fight/index.html" width="100%" height="100%" style="border:0;">
     </iframe>
   </body>
 </html>
