--- a/games/a-small-world-cup/index.html
+++ b/games/a-small-world-cup/index.html
@@ -8,7 +8,19 @@
        <title> Home</title>
   </head>
   <body>
-     <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1643267/index.html" width="100%" height="100%" style="border:0;">
+     <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1643267/index.html" width="100%" height="100%" style="border:0;" id="embededGame">
     </iframe>
+    <button onclick="goFullscreen('embededGame'); return false">Fullscreen</button>
+ 
+<script>
+function goFullscreen(id) {
+    var element = document.getElementById(id);
+    if (element.mozRequestFullScreen) {
+      element.mozRequestFullScreen();
+    } else if (element.webkitRequestFullScreen) {
+      element.webkitRequestFullScreen();
+    }
+}
+</script>
   </body>
 </html>
