--- a/games/a-small-world-cup/index.html
+++ b/games/a-small-world-cup/index.html
@@ -6,11 +6,12 @@
      </button>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
        <title> Home</title>
+
   </head>
   <body>
      <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1643267/index.html" width="100%" height="100%" style="border:0;" id="embededGame">
     </iframe>
-    <button onclick="goFullscreen('embededGame'); return false">Fullscreen</button>
+ <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
  
 <script>
 function goFullscreen(id) {
