--- a/games/ovo/index.html
+++ b/games/ovo/index.html
@@ -8,7 +8,20 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-     <iframe src="https://ubg98.github.io/OvO" width="100%" height="100%" style="border:0;">
+     <iframe src="https://ubg98.github.io/OvO" width="100%" height="100%" style="border:0;" id="embededGame">
     </iframe>
+     <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
+ 
+<script>
+function goFullscreen(id) {
+    var element = document.getElementById(id);
+    if (element.mozRequestFullScreen) {
+      element.mozRequestFullScreen();
+    } else if (element.webkitRequestFullScreen) {
+      element.webkitRequestFullScreen();
+    }
+}
+</script>
+
   </body>
 </html>
